avances a la página

--- a/WWW/landingPage.html
+++ b/WWW/landingPage.html
@@ -9,6 +9,113 @@
         <div class="encabezado">
             <a href="/landingPage.html" class="imgRef"><img src="/img/logo.jpeg" class="logo"/></a>
         </div>
+        <div class="cuerpo">
+            <p id="frase"><i>RENTA MOMENTOS, RENTA AUTOS</i></p>
+            <h1>Seleccionados con cariño</h1>
+            <table id="primeros">
+                <tr>
+                    <td><a href="/auto1.html"><img src="/img/carros/22.png" class="de3"/></a></td>
+                    <td><a href="/auto2.html"><img src="/img/carros/23.png" class="de3"/></a></td>
+                    <td><a href="/auto3.html"><img src="/img/carros/25.png" class="de3"/></a></td>
+                </tr>
+            </table>
+            <h1 class="titulos"><i>Ya sea que busques un diseño alegre o un rojo clasico aquí lo tenemos</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/8.png" class="fAuto"/><div><i>
+                        <p>Happy<br>2021<br>Nisuru<br>$2100</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/24.png" class="fAuto"/><div><i>
+                        <p>Serene<br>2022<br>Nisuru<br>$2300</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/21.png" class="fAuto"/><div><i>
+                        <p>Cherry<br>2022<br>Ferry<br>$4000</p>
+                    </i></div></td>
+                </tr>
+            </table>
+            <h1 class="titulos"><i>¿Necesitas espacio?.. ¡Lo tienes!</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/1.png" class="fAuto"/><div><i>
+                        <p>Fly S<br>2021<br>Bently<br>$3500</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/2.png" class="fAuto"/><div><i>
+                        <p>Fly B<br>2020<br>Bently<br>$3300</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/3.png" class="fAuto"/><div><i>
+                        <p>Fly D<br>2022<br>Bently<br>$3750</p>
+                    </i></div></td>
+                </tr>
+            </table>
+            <h1 class="titulos"><i>Para los que prefieren lo retro</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/13.png" class="fAuto"/><div><i>
+                        <p>Old WV<br>2020<br>Vintag<br>$2000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/14.png" class="fAuto"/><div><i>
+                        <p>Vin W<br>2021<br>Vintag<br>$2100</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/15.png" class="fAuto"/><div><i>
+                        <p>Old V-V<br>2021<br>Vintag<br>$2100</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/16.png" class="fAuto"/><div><i>
+                        <p>Vinta<br>2021<br>Bently<br>$2250</p>
+                    </i></div></td>
+                </tr>
+            </table>
+            <h1 class="titulos"><i>...o quizá algo más moderno</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/4.png" class="fAuto"/><div><i>
+                        <p>New V<br>2023<br>Farry<br>$160000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/5.png" class="fAuto"/><div><i>
+                        <p>New V2<br>2023<br>Farry<br>$170000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/6.png" class="fAuto"/><div><i>
+                        <p>New N<br>2023<br>Farry<br>$185000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/7.png" class="fAuto"/><div><i>
+                        <p>New W<br>2023<br>Farry<br>$186000</p>
+                    </i></div></td>
+                </tr>
+            </table>
+            <h1 class="titulos"><i>¡Be a superhero!</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/9.png" class="fAuto"/><div><i>
+                        <p>I M1<br>2023<br>Lamby<br>$186000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/10.png" class="fAuto"/><div><i>
+                        <p>I M2<br>2023<br>Lamby<br>$186000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/11.png" class="fAuto"/><div><i>
+                        <p>I M3<br>2023<br>Lamby<br>$189000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/12.png" class="fAuto"/><div><i>
+                        <p>I M4<br>2023<br>Lamby<br>$190000</p>
+                    </i></div></td>
+                </tr>
+            </table>
+            <h1 id="black" class="titulos"><i>"Soy blackman"</i></h1>
+            <table class="tAuto">
+                <tr>
+                    <td><img src="/img/carros/17.png" class="fAuto"/><div><i>
+                        <p>Bat Black<br>2023<br>Lamby<br>$192000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/18.png" class="fAuto"/><div><i>
+                        <p>B M<br>2023<br>Farry<br>$195000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/19.png" class="fAuto"/><div><i>
+                        <p>BTB<br>2023<br>Lamby<br>$195000</p>
+                    </i></div></td>
+                    <td><img src="/img/carros/20.png" class="fAuto"/><div><i>
+                        <p>BT1<br>2023<br>Lamby<br>$199999</p>
+                    </i></div></td>
+                </tr>
+            </table>
+        </div>
 	    <div class="pieDePagina">
 		    <a href="/contacto.html" class="liga-izquierda">Contacto</a>
 		    <a href="/acercaDe.html" class="liga-derecha">Acerca de</a>
