--- a/WWW/landingPage.html
+++ b/WWW/landingPage.html
@@ -115,6 +115,7 @@
                     </i></div></td>
                 </tr>
             </table>
+            <h2 id="tFormulario">Te interesa algo de lo que viste... Rellena nuestro <a href="/formulario.html" id="formulario">Formulario</a></h2>
         </div>
 	    <div class="pieDePagina">
 		    <a href="/contacto.html" class="liga-izquierda">Contacto</a>
