--- a/WWW/auto3.html
+++ b/WWW/auto3.html
@@ -17,9 +17,10 @@
                 <p class="pAuto"><b><i>Un hermoso Auda ED 2023 con un amarillo deslumbrante del que puedes disfrutar por tan solo $2275 el día.</i></b></p>
             </div>
         </div>
-        <div class="pieDePagina">
-		    <a href="/contacto.html" class="liga-izquierda">Contacto</a>
-		    <a href="/acercaDe.html" class="liga-derecha">Acerca de</a>
+        <div class="pieDePag">
+		    <a href="/contacto.html" class="liga-izq">Contacto</a>
+		    <a href="/acercaDe.html" class="liga-central">Acerca de</a>
+            <a href="/formulario.html" class="liga-der">Formulario</a>
 	    </div>
     </body>
 </html>
